--- a/src/Sufficit.Asterisk.Utils.csproj
+++ b/src/Sufficit.Asterisk.Utils.csproj
@@ -47,7 +47,7 @@
 		<PackageIcon>icon.png</PackageIcon>
 	</PropertyGroup>
 
-	<ItemGroup Label="Sufficit Pacote NUGET Itens">
+	<ItemGroup Label="Sufficit Pack Items">
 		<None Include="../icon.png">
 			<Pack>True</Pack>
 			<PackagePath></PackagePath>
@@ -58,6 +58,13 @@
 		</None>
 		<None Include="../readme.md">
 			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+	</ItemGroup>
+
+	<ItemGroup Label="Sufficit IA Configurations">
+		<None Include="../.github/copilot-instructions.md">
+			<Pack>False</Pack>
 			<PackagePath></PackagePath>
 		</None>
 	</ItemGroup>
